Update and rename example2_double_spirals.html to index.html

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@ Jesus only said what He heard the Father say, and He only did what He saw the Fa
 			</h2>
 		</div>
 
-			<script type="text/javascript" src="js//Three.js"></script>
+			<script type="text/javascript" src="./js//Three.js"></script>
 
-			<script type="text/javascript" src="js/RequestAnimationFrame.js"></script>
-			<script type="text/javascript" src="js/Stats.js"></script>
+			<script type="text/javascript" src="./js/RequestAnimationFrame.js"></script>
+			<script type="text/javascript" src="./js/Stats.js"></script>
 
-			<script type="text/javascript" src="js/Tween.js"></script>
-			<script type="text/javascript" src="../Sparks.js"></script>
+			<script type="text/javascript" src="./js/Tween.js"></script>
+			<script type="text/javascript" src="Sparks.js"></script>
 		
 			<script type="text/javascript" src="CanvasShaders.js"></script>
 		<!--
